[package]
name = "gear_gen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3" }
nalgebra = { version = "0.34" }
roxmltree = "0.20"
anyhow = "1.0"

[lib]
name = "gcode"
path = "src/lib/lib.rs"